--- a/Getting-Started/SoundJS/index.html
+++ b/Getting-Started/SoundJS/index.html
@@ -44,7 +44,7 @@
 
     <!-- Page Content -->
     <div class="container">
-	     <h1 class="my-4" style="color:white; text-align:center;">Welcome</h1>
+	     <h1 class="my-4" style="color:white; text-align:center;">Are you Ready to make some NOISE!</h1>
 
 
       <!-- Sounds from https://www.soundeffectsplus.com -->
